Changes svg art name to objects-in-space Fixed the z-index on svg elements so you can click on links The stars are now styled by css instead of svg Stars no longer rotate because of cpu concerns

--- a/app/assets/stylesheets/svg.css
+++ b/app/assets/stylesheets/svg.css
@@ -9,7 +9,6 @@
   left: 18px;
   color: #CABEB3;
   text-shadow: 0 2pt 0 #E8E2DD;
-  z-index: 1000;
   min-width: 700px;
 }
   
@@ -27,4 +26,16 @@
   height: 100%;
   min-height: 1000px;
   min-width: 1000px;
+}
+
+#stars {
+  z-index: -1000;
+}
+
+#stars circle {
+  fill: #fff;
+}
+
+#spaceArt {
+  z-index: -500;
 }
